kubernetes/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: app
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: app
    spec:
      containers:
        - name: app
          image: kieranbamforth/blog:3
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "10Mi"
              cpu: 0.002
            requests:
              memory: "10Mi"
              cpu: 0.002
        - name: app-gatsby
          image: kieranbamforth/blog:gatsby-6
          ports:
            - containerPort: 81
          resources:
            limits:
              memory: "10Mi"
              cpu: 0.002
            requests:
              memory: "10Mi"
              cpu: 0.002
      restartPolicy: Always
