kubernetes/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    name: blog
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service-gatsby
  namespace: blog
spec:
  ports:
    - name: http
      port: 80
      targetPort: 81
  selector:
    name: blog
