kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app
  name: blog-service
  namespace: blog
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: app
