kubernetes/04-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
       - irkb.me
       - www.irkb.me
       - kierans.blog
       - www.kierans.blog
       - kieranbamforth.me
       - blog.k8s.istio.kieranbamforth.me
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redirect-service
  namespace: istio-system
spec:
  gateways:
    - blog-gateway
  hosts:
    - irkb.me
    - www.irkb.me
    - kierans.blog
    - www.kierans.blog
    - kieranbamforth.me
  http:
  - name: vanity-redirect
    redirect:
      authority: www.kieranbamforth.me
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog-vservice
  namespace: istio-system
spec:
  gateways:
    - blog-gateway
  hosts:
  - blog.k8s.istio.kieranbamforth.me
  - www.kieranbamforth.me
  http:
  - name: "blog-gatsby"
    match:
      - uri:
          exact: /
    route:
    - destination:
        host: blog-service-gatsby.blog.svc.cluster.local
        port:
          number: 80
  - name: "blog-gatsby-static"
    match:
      - uri:
          regex: "/(static/|page-data|webpack-|app-|framework-|component-).*"
    route:
    - destination:
        host: blog-service-gatsby.blog.svc.cluster.local
        port:
          number: 80
  - name: "blog"
    route:
    - destination:
        host: blog-service.blog.svc.cluster.local
        port:
          number: 80
